welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: value math is not a member of (Boolean, Int)
  (talking,hour) math {
                 ^parotTrouble:3: error: value =< is not a member of Any
    case (true, hour) if (hour =<  7) => true ;
                               ^parotTrouble:4: error: missing parameter type
    case (true, hour) if (hour => 20) => true ;
                          ^